# matrix-rich-text-editor

./: .gitignore  .slather.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  Makefile  README.md  RELEASE.md  build_xcframework.sh  codecov.yml  package-lock.json  release_ios.sh  renovate.json  rust-toolchain.toml  rust_toolchain.toml  sonar-project.properties  update_version.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: add-new-issues-to-natsec-features-project.yaml  add-new-issues-to-verticals-project  android-release.yml  android.yml  deploy-web-demo.yml  ios.yml  publish-ios.yml  publish.yml  react-build.yml  react-test.yml  rust.yml  sonarqube.yml  tag-release.yml  triage-labelled.yml  wasm.yml  web.yml
bindings/wysiwyg-ffi/: Cargo.toml  README.md  build.rs  uniffi.toml
bindings/wysiwyg-ffi/src/: ffi_action_request.rs  ffi_action_response.rs  ffi_action_state.rs  ffi_composer_action.rs  ffi_composer_model.rs  ffi_composer_state.rs  ffi_composer_update.rs  ffi_dom.rs  ffi_dom_creation_error.rs  ffi_format_type.rs  ffi_link_actions.rs  ffi_mention_detector.rs  ffi_mentions_state.rs  ffi_menu_action.rs  ffi_menu_state.rs  ffi_pattern_key.rs  ffi_suggestion_pattern.rs  ffi_text_update.rs  ffi_toolbar_button.rs  ffi_trailing_strategy.rs  into_ffi.rs  lib.rs  my_rust_code.udl  wysiwyg_composer.udl
bindings/wysiwyg-wasm/: Cargo.toml  README.md  package-lock.json  package.json
bindings/wysiwyg-wasm/src/: lib.rs
crates/matrix_mentions/: Cargo.toml
crates/matrix_mentions/src/: lib.rs  mention.rs
crates/unicode_string/: Cargo.toml
crates/unicode_string/src/: lib.rs  unicode_string.rs
crates/wysiwyg/: Cargo.toml
crates/wysiwyg/src/: action_state.rs  bytelocation.rs  char.rs  codepoint_delta.rs  codepoint_location.rs  composer_action.rs  composer_list_handler.rs  composer_model.rs  composer_state.rs  composer_toolbar_button.rs  composer_update.rs  dom.rs  format_nodes.rs  format_type.rs  lib.rs  link_action.rs  list_type.rs  location.rs  markdown_html_parser.rs  mentions_state.rs  menu_action.rs  menu_state.rs  node_joiner.rs  pattern_key.rs  suggestion_pattern.rs  tests.rs  text_update.rs  trailing_strategy.rs  utf16_codeunit_location.rs  web_selection.rs
crates/wysiwyg/src/composer_model/: base.rs  block_nodes.rs  code_block.rs  delete_text.rs  example_format.rs  format.rs  format_inline_code.rs  format_nodes.rs  hyperlinks.rs  join_nodes.rs  lists.rs  mentions.rs  menu_action.rs  menu_state.rs  new_lines.rs  quotes.rs  replace_text.rs  selection.rs  undo_redo.rs
crates/wysiwyg/src/dom/: action_list.rs  dom_block_nodes.rs  dom_creation_error.rs  dom_handle.rs  dom_invariants.rs  dom_list_methods.rs  dom_methods.rs  dom_struct.rs  element.rs  find_extended_range.rs  find_range.rs  find_result.rs  html_formatter.rs  insert_node_at_cursor.rs  insert_node_at_range.rs  insert_parent.rs  iter.rs  join_nodes.rs  mod.rs  nodes.rs  parser.rs  range.rs  to_html.rs  to_markdown.rs  to_plain_text.rs  to_raw_text.rs  to_tree.rs  unicode_string.rs
crates/wysiwyg/src/dom/nodes/: container_node.rs  dom_node.rs  formatting_node.rs  hyperlink_node.rs  line_break_node.rs  mention_node.rs  mod.rs  node_id.rs  text_node.rs  zwsp_node.rs
crates/wysiwyg/src/dom/parser/: markdown.rs  padom.rs  padom_creation_error.rs  padom_creator.rs  padom_handle.rs  padom_node.rs  panode_container.rs  panode_text.rs  paqual_name.rs  parse.rs
crates/wysiwyg/src/dom/parser/markdown/: markdown_html_parser.rs
crates/wysiwyg/src/tests/: test_characters.rs  test_deleting.rs  test_emoji_replacement.rs  test_formatting.rs  test_get_link_action.rs  test_links.rs  test_lists.rs  test_lists_with_blocks.rs  test_mentions.rs  test_menu_action.rs  test_menu_state.rs  test_paragraphs.rs  test_remove_links.rs  test_replace_all_content.rs  test_replace_all_html.rs  test_selection.rs  test_set_content.rs  test_suggestions.rs  test_to_markdown.rs  test_to_message_html.rs  test_to_plain_text.rs  test_to_raw_text.rs  test_to_tree.rs  test_undo_redo.rs  testutils.rs  testutils_composer_model.rs  testutils_conversion.rs  testutils_dom.rs
crates/wysiwyg/tests/: tests.rs
examples/android/app/: build.gradle
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/uniffi/wysiwyg_composer/: wysiwyg_composer.kt
examples/android/app/src/main/res/values/: strings.xml
examples/android/app/src/main/res/values-night/: themes.xml
examples/example-android/: README.md  coverage.gradle  settings.gradle
examples/example-android-compose/: README.md  build.gradle  settings.gradle
examples/example-android-compose/app/: build.gradle
examples/example-android-compose/app/src/main/: AndroidManifest.xml
examples/example-android-compose/app/src/main/java/uniffi/wysiwyg_composer/: wysiwyg_composer.kt
examples/example-android-compose/app/src/main/res/layout/: activity_main.xml
examples/example-android-compose/app/src/main/res/values/: themes.xml
examples/example-android/app/: build.gradle
examples/example-android/app/src/main/: AndroidManifest.xml
examples/example-android/app/src/main/res/layout/: activity_main.xml
examples/example-android/app/src/main/res/values/: strings.xml
examples/example-android/gradle/wrapper/: gradle-wrapper.properties
examples/example-ios/: .gitignore
examples/example-ios/LibWysiwyg.xcframework/: Info.plist
examples/example-ios/LibWysiwyg.xcframework/ios-arm64/Headers/: WysiwygComposerFFI.h
examples/example-ios/Sources/: WysiwygComposer.swift
examples/example-ios/Wysiwyg/: ContentView.swift  WysiwygApp.swift
examples/example-ios/Wysiwyg.xcodeproj/: project.pbxproj
examples/example-ios/Wysiwyg.xcodeproj/xcshareddata/xcschemes/: Wysiwyg.xcscheme
examples/example-ios/WysiwygTests/: WysiwygTests.swift
examples/example-ios/WysiwygUITests/: WysiwygUITests.swift  WysiwygUITestsLaunchTests.swift
examples/example-ios/headers/: module.modulemap
examples/example-web/: TODO.md  index.html  test.html  test.js  wysiwyg.js
(+18 files in other folders)
