[workspace]
members = [
    "bindings/wysiwyg-ffi",
    "bindings/wysiwyg-wasm",
    "crates/wysiwyg",
    "crates/matrix_mentions",
    "uniffi-bindgen",
]
default-members = [
    "crates/wysiwyg",
    "crates/matrix_mentions",
]
resolver = "2"

[workspace.package]
rust-version = "1.71"

[workspace.dependencies]
# We use a custom version of Uniffi that renames symbols that might clash
# with other Rust libraries. See https://github.com/mozilla/uniffi-rs/issues/1670
uniffi = { git = "https://github.com/aringenbach/uniffi-rs.git", rev = "737286e8fb43cda66f17b7efd6d3b351d72d70e1" }
uniffi_macros = { git = "https://github.com/aringenbach/uniffi-rs.git", rev = "737286e8fb43cda66f17b7efd6d3b351d72d70e1" }
uniffi_build = { git = "https://github.com/aringenbach/uniffi-rs.git", rev = "737286e8fb43cda66f17b7efd6d3b351d72d70e1" }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# Unwind on panic to allow error handling at the FFI boundary. Note this 
# imposes a small performance/size cost and it could be worth switching 
# the behaviour to 'abort' once the library is stable.
panic = 'unwind'    
debug = true        # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.
