[workspace]
members = [
    "bindings/wysiwyg-ffi",
    "bindings/wysiwyg-wasm",
    "crates/wysiwyg",
    "crates/matrix_mentions",
    "uniffi-bindgen",
]
default-members = [
    "crates/wysiwyg",
    "crates/matrix_mentions",
]
resolver = "2"

[workspace.package]
rust-version = "1.71"

[workspace.dependencies]
uniffi = "0.25.2"
uniffi_macros = "0.25.2"
uniffi_build = "0.25.2"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# Unwind on panic to allow error handling at the FFI boundary. Note this 
# imposes a small performance/size cost and it could be worth switching 
# the behaviour to 'abort' once the library is stable.
panic = 'unwind'    
debug = true        # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.
