[package]
authors = ["Andy Balaam <andy.balaam@matrix.org>"]
edition = "2021"
homepage = "https://gitlab.com/andybalaam/wysiwyg-rust"
repository = "https://gitlab.com/andybalaam/wysiwyg-rust"
description = "Swift and Kotlin bindings for wysiwyg-rust"
keywords = ["matrix", "chat", "messaging", "composer", "wysiwyg"]
license = "Apache-2.0"
name = "uniffi-wysiwyg-composer"
version = "0.4.0"
rust-version = "1.60"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Keep the uniffi version here in sync with the installed version of
# uniffi-bindgen that is called from
# ../../examples/example-android/app/build.gradle
strum = "0.24"
strum_macros = "0.24"
uniffi = "=0.19.2"
uniffi_macros = "=0.19.2"
widestring = "1.0.2"
wysiwyg = { path = "../../crates/wysiwyg" }

[build-dependencies]
uniffi_build = { version = "=0.19.2", features = ["builtin-bindgen"] }
