[package]
authors = ["Andy Balaam <andy.balaam@matrix.org>"]
edition = "2021"
homepage = "https://gitlab.com/andybalaam/wysiwyg-rust"
repository = "https://gitlab.com/andybalaam/wysiwyg-rust"
description = "Swift and Kotlin bindings for wysiwyg-rust"
keywords = ["matrix", "chat", "messaging", "composer", "wysiwyg"]
license = "Apache-2.0"
name = "uniffi-wysiwyg-composer"
version = "2.13.0"
rust-version = { workspace = true }

[features]
default = []
assert-invariants = ["wysiwyg/assert-invariants"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Keep the uniffi version here in sync with the installed version of
# uniffi-bindgen that is called from
# ../../examples/example-android/app/build.gradle
uniffi = { workspace = true }
uniffi_macros = { workspace = true }
widestring = "1.0.2"
wysiwyg = { path = "../../crates/wysiwyg" }

[build-dependencies]
uniffi_build = { workspace = true, features = ["builtin-bindgen"] }
