[package]
authors = ["Jonny Andrew <jonnya@element.io>"]
homepage = "https://github.com/matrix-org/matrix-rich-text-editor"
repository = "https://github.com/matrix-org/matrix-rich-text-editor"
description = "Utilities for Matrix mentions"
keywords = ["matrix", "chat", "messaging"]
license = "Apache-2.0"
name = "matrix_mentions"
version = "0.1.0"
edition = "2021"

[dependencies]

ruma-common = "0.11.3"
