[package]
authors = ["Andy Balaam <andy.balaam@matrix.org>"]
edition = "2021"
homepage = "https://gitlab.com/andybalaam/wysiwyg-rust"
repository = "https://gitlab.com/andybalaam/wysiwyg-rust"
description = "Model code to power a WYSIWYG editor for Matrix"
keywords = ["matrix", "chat", "messaging", "composer", "wysiwyg"]
license = "Apache-2.0"
name = "wysiwyg"
version = "0.3.2"
rust-version = "1.60"

[features]
default = ["sys"]
sys = ["dep:html5ever"]
js = ["dep:wasm-bindgen", "dep:web-sys"]

[dependencies]
html-escape = "0.2.11"
html5ever = { version = "0.25.2", optional = true }
once_cell = "1.13.0"
widestring = "1.0.2"
wasm-bindgen = { version = "0.2.83", default-features = false, optional = true }
web-sys = { version = "0.3.60", default-features = false, features = ["Document", "DomParser", "HtmlElement", "Node", "NodeList", "SupportedType"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
speculoos = "0.9"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.33"
