[package]
authors = ["Andy Balaam <andy.balaam@matrix.org>"]
edition = "2021"
homepage = "https://gitlab.com/andybalaam/wysiwyg-rust"
repository = "https://gitlab.com/andybalaam/wysiwyg-rust"
description = "Model code to power a rich text editor for Matrix"
keywords = ["matrix", "chat", "messaging", "composer", "wysiwyg"]
license = "Apache-2.0"
name = "wysiwyg"
version = "0.4.0"
rust-version = "1.60"

[dependencies]
html-escape = "0.2.11"
html5ever = "0.25.2"
once_cell = "1.13.0"
widestring = "1.0.2"

[dev-dependencies]
speculoos = "0.9"
pulldown-cmark = { version = "0.9.2", default-features = false }

[features]
default = ["to-markdown"]
to-markdown = []
